Fix scrolling on mobile

--- a/css/documentation.scss
+++ b/css/documentation.scss
@@ -91,6 +91,7 @@ body {
 
     &.scrollable{
       overflow: auto !important; 
+      -webkit-overflow-scrolling: touch;
     }
   }
 
